--- a/drawer.html
+++ b/drawer.html
@@ -7,7 +7,7 @@
 
   <body>
     <div id="page-wrap" class="center">
-      <h1>Draw with keys</h1>
+      <h1>KeyDrawer</h1>
       <canvas id="canvas" width="800" height="600"></canvas>
     </div>
 
