--- a/drawer.html
+++ b/drawer.html
@@ -11,7 +11,9 @@
       <canvas id="canvas" width="800" height="600"></canvas>
     </div>
 
-    <script src="socket.io/socket.io.js"></script>
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
+    <!-- <script src="./socket.io.js"></script> -->
     <script src="./drawer.js"></script>
   </body>
 
