Fix setStrokeColor to work with FF add meta utf8 charset for document

--- a/drawer.html
+++ b/drawer.html
@@ -3,6 +3,7 @@
   <head>
     <title>Drawing with keys!</title>
     <link rel="stylesheet" type="text/css" href="./drawer.css">
+    <meta charset="utf-8">
   </head>
 
   <body>
