Show connected users

--- a/drawer.html
+++ b/drawer.html
@@ -9,6 +9,7 @@
   <body>
     <div id="page-wrap" class="center">
       <h1>KeyDrawer</h1>
+      <h4 id="user-count">Connected:</h4>
       <canvas id="canvas" width="800" height="600"></canvas>
     </div>
 
